--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -1,9 +1,9 @@
+/* Satoshi */
 @font-face {
   font-family: "Satoshi";
   src: url("./fonts/Satoshi-Regular.otf");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -11,7 +11,6 @@
   src: url("./fonts/Satoshi-Medium.otf");
   font-weight: 600;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -19,15 +18,13 @@
   src: url("./fonts/Satoshi-Bold.otf");
   font-weight: 800;
   font-style: normal;
-  font-display: swap;
 }
-
+/* IntegralCF */
 @font-face {
   font-family: "IntegralCF";
   src: url("./fonts/IntegralCF-Regular.otf");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -35,7 +32,6 @@
   src: url("./fonts/IntegralCF-Medium.otf");
   font-weight: 600;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -43,5 +39,4 @@
   src: url("./fonts/IntegralCF-Bold.otf");
   font-weight: 800;
   font-style: normal;
-  font-display: swap;
 }
